--- a/client/src/widgets/06/style.scss
+++ b/client/src/widgets/06/style.scss
@@ -430,9 +430,7 @@
           scrollbar-gutter: stable both-edges;
           scrollbar-width: thin;
           scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
-          width: calc(100% + 6px);
-          padding-right: 6px;
-          margin-right: -6px;
+          width: 100%;
 
           // Scrollbar Styles
           &::-webkit-scrollbar {
